Add Cloudinary image upload support and production config
- Add CloudinaryConfig, CloudinaryService, CloudinaryController, CloudinaryUploadResponse
- Add cloudinary section to application-prod.yaml with env var placeholders
- Update SecurityConfig to allow /api/cloudinary/** upload endpoints
- Add docker-compose.prod.yml for Hostinger production deployment
- Update build.gradle with Cloudinary SDK dependency
- Update AuthService, AuthController, JwtAuthenticationFilter, DataInitializer

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>